fix spacing of each section

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ h2 {
   font-size: 48px;
 }
 
+.title {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 48px;
+  margin-top: .83em;
+}
 h3 {
   font-family: 'Open Sans', sans-serif;
   font-size: 36px;
@@ -65,7 +70,7 @@ section.background {
   margin: auto;
   display: flex;
   justify-content: flex-start;
-  background: url('./pano1.png') no-repeat center center fixed;
+  background: url('./pano3.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -96,6 +101,8 @@ ul {
   display: flex;
   flex-direction: column;
   margin: auto;
+  margin-top: .83em;
+  margin-bottom: 25px;
 }
 
 ul > li {
@@ -148,6 +155,12 @@ section.project {
   /*border-radius: 70%;*/
 }
 
+.skills-section {
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+}
+
 .skills {
   display: flex;
   width: 1300px;
@@ -168,4 +181,13 @@ section.project {
   margin: 15px;
   align-items: center;
   font-size: 11em;
+}
+
+.projects-section {
+  /*padding-top: 50px;*/
+  width: 1300px;
+  /*height: 800px;*/
+  margin: auto;
+  display: flex;
+  flex-direction: column;
 }
